2013-07-03  Sancho Lerena <slerena@artica.es>

	* operation/menu.php
        godmode/menu.php: removed some autorefresh initial values on listing 
	menus.

2013-07-02 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/system_info.php: clean source code style.
	
	* mobile/include/ui.class.php: fixed the selectbox for int values.
	
	* mobile/operation/home.php, mobile/index.php,
	mobile/operation/networkmaps.php, mobile/operation/networkmap.php:
	added networkmap.
	
	* include/functions_ui.php: added for get only the src of module
	type.
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.topology.php: add support for
	networkmaps in mobile.

2013-07-02 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_networkmap.php,
	operation/agentes/networkmap.topology.php,
	operation/agentes/networkmap.groups.php,
	operation/agentes/networkmap.php: improved the source code style.

2013-07-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php, include/functions_menu.php: fixed the entry
	gis map in ACL enterprise.

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* operation/search_agents.php: added the search by ip agent.

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.constans.php: erased old
	constants.

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/servers/plugin.php, godmode/setup/file_manager.php,
	include/functions_filemanager.php: added the filemanager to server
	plugin, and of course change the code for to make this feature.

2013-06-18  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Merged from trunk. Fixed a warning.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_agents.php: fixed the operations with the ip or
	ips adress of agent.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php: fixed the default value for refresh in the
	extensions.
	